#28: change section dto to hold references to sessions