@@ -1,6 +1,5 @@
 package at.ac.tuwien.sepm.groupphase.backend.service.impl;
 
-import at.ac.tuwien.sepm.groupphase.backend.datagenerator.UserDataGenerator;
 import at.ac.tuwien.sepm.groupphase.backend.endpoint.dto.MergeRolesDto;
 import at.ac.tuwien.sepm.groupphase.backend.enums.Role;
 import at.ac.tuwien.sepm.groupphase.backend.exception.NotFoundException;
@@ -9,6 +8,7 @@ import at.ac.tuwien.sepm.groupphase.backend.repository.RoleRepository;
 import at.ac.tuwien.sepm.groupphase.backend.service.RoleService;
 import at.ac.tuwien.sepm.groupphase.backend.service.ScriptService;
 import at.ac.tuwien.sepm.groupphase.backend.service.UserService;
+import at.ac.tuwien.sepm.groupphase.backend.testhelpers.UserTestHelper;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,7 +17,6 @@ import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
@@ -30,7 +29,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
  *
  * @author Luke Nemeskeri
  */
-@ActiveProfiles({"test", "datagen"})
+@ActiveProfiles({ "test", "datagen" })
 @SpringBootTest
 class RoleServiceUnitTest {
 
@@ -49,11 +48,10 @@ class RoleServiceUnitTest {
     @Test
     @Transactional
     @DisplayName("mergeRoles")
-    @WithMockUser(username = UserDataGenerator.TEST_USER_EMAIL_LOCAL + 1 + UserDataGenerator.TEST_USER_EMAIL_DOMAIN, password = UserDataGenerator.TEST_USER_PASSWORD + 1,
-        roles = {Role.verified})
+    @WithMockUser(username = UserTestHelper.dummyUserEmail, password = UserTestHelper.dummyUserPassword, roles = { Role.verified })
     void mergeRoles() {
-        List<Long> rolesToMerge = new LinkedList<Long>(Arrays.asList(2L, 4L, 3L));
-        List<Long> rolesToMergeFail = new LinkedList<Long>(Arrays.asList(7L, 4L, 3L));
+        List<Long> rolesToMerge = new LinkedList<>(List.of(2L, 4L, 3L));
+        List<Long> rolesToMergeFail = new LinkedList<>(List.of(7L, 4L, 3L));
         assertThrows(ValidationException.class, () -> roleService.mergeRoles(new MergeRolesDto(rolesToMergeFail, "MEROLE"), 1L));
         roleService.mergeRoles(new MergeRolesDto(rolesToMerge, "MERGEROLE"), 1L);
 
@@ -69,10 +67,9 @@ class RoleServiceUnitTest {
     @Test
     @Transactional
     @DisplayName("mergeRoles with only 1 role")
-    @WithMockUser(username = UserDataGenerator.TEST_USER_EMAIL_LOCAL + 1 + UserDataGenerator.TEST_USER_EMAIL_DOMAIN, password = UserDataGenerator.TEST_USER_PASSWORD + 1,
-        roles = {Role.verified})
+    @WithMockUser(username = UserTestHelper.dummyUserEmail, password = UserTestHelper.dummyUserPassword, roles = { Role.verified })
     void mergeRolesIsNotNeeded() {
-        List<Long> rolesToMerge = new LinkedList<Long>(Arrays.asList(5L));
+        List<Long> rolesToMerge = new LinkedList<>(List.of(5L));
         assertEquals(5L, roleService.mergeRoles(new MergeRolesDto(rolesToMerge, "MERGE"), 1L).getId());
     }
 }
